Fix condition when adding grid-item wrap class

--- a/src/components/entries/grid/Grid.module.sass
+++ b/src/components/entries/grid/Grid.module.sass
@@ -1,4 +1,4 @@
-=grid($flow: row nowrap, $gap: 0)
+=grid($flow: row, $gap: 0)
     display: flex
     flex-direction: $flow
     gap: $gap
@@ -8,9 +8,13 @@
 
 
 .column
-    +grid($flow: column nowrap, $gap: 1rem)
+    +grid($flow: column, $gap: 1rem)
 
 .wrap
     flex-wrap: wrap
 
+
+grid-item
+    span //nav links
+        flex: 1
 
