--- a/src/components/layout/Layout.module.sass
+++ b/src/components/layout/Layout.module.sass
@@ -5,3 +5,7 @@
         family: $font
         size: $size
         weight: 400
+
+img
+    width: 100%
+    height: auto
